Fix slideshow on mobile

--- a/app/assets/stylesheets/houses.css.scss
+++ b/app/assets/stylesheets/houses.css.scss
@@ -62,6 +62,28 @@
     background-color: $card-image-hover-color;
     width: 70%;
     margin: 40px auto;
+    @media only screen
+    and (min-device-width: 375px)
+    and (max-device-width: 667px)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation: portrait) {
+      width: 100%;
+    }
+
+    /* Landscape */
+    @media only screen
+    and (min-device-width: 375px)
+    and (max-device-width: 667px)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation: landscape) {
+      width: 100%;
+    }
+    @media screen and (max-width: 800px){
+      width: 100%;
+    }
+    @media screen and (max-width: 600px){
+      width: 100%;
+    }
     img {
       @include border-top-radius($base-border-radius);
       opacity: 1;
